samples/_failures_safe/1761798783_e01508_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a02949a.c: In function ‘main’:
./samples/SAFE/__tmp_0a02949a.c:159:13: error: expected declaration or statement at end of input
  159 |             if (status == 1) {
      |             ^~
./samples/SAFE/__tmp_0a02949a.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0a02949a.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0a02949a.c:159:13: error: expected declaration or statement at end of input
